zero-cost-templating/tests/ui/compile_fail/moved_value.stderr
error[E0382]: use of moved value: `template`
  --> tests/ui/compile_fail/moved_value.rs:14:28
   |
12 |     let template = yields!(test_initial0());
   |         -------- move occurs because `template` has type `Template<TestTemplate0, (), ()>`, which does not implement the `Copy` trait
13 |     let _ = yields!(template.test_template0());
   |                              ---------------- `template` moved due to this method call
14 |     let template = yields!(template.test_template0());
   |                            ^^^^^^^^ value used here after move
   |
note: `Template::<TestTemplate0, Partial, After>::test_template0` takes ownership of the receiver `self`, which moves `template`
  --> tests/ui/compile_fail/moved_value.rs:10:1
   |
10 | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
